Store how long since a player was active
