# idle-react/src/app/types.ts
@@ -253,6 +253,7 @@ export type PlayerProfileResponse = {
     username: string;
     accountAgeSeconds: number;
     currentIdleSeconds: number;
+    timeAwaySeconds: number;
     idleTime: TimeCurrencyBalances;
     realTime: TimeCurrencyBalances;
     timeGems: TimeCurrencyBalances;
